// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when active 1`] = `
<li
  className=" toggle active notest control"
>
  <div
    className="control-main"
  >
    <h3
      className="control-title"
    >
      Test toggle
    </h3>
    
    <div
      className=" checkbox"
      onClick={[Function]}
      style={
        Object {
          "backgroundImage": "url(letter-x.png)",
        }
      }
    />
  </div>
  <p>
    some subtext for a toggle
  </p>
</li>
`;

exports[`renders when disabled 1`] = `
<li
  className=" toggle notest control"
>
  <div
    className="control-main"
  >
    <h3
      className="control-title"
    >
      Test toggle
    </h3>
    
    <div
      className=" checkbox disabled"
    />
  </div>
  <p>
    some subtext for a toggle
  </p>
</li>
`;

exports[`renders when inactive 1`] = `
<li
  className=" toggle notest control"
>
  <div
    className="control-main"
  >
    <h3
      className="control-title"
    >
      Test toggle
    </h3>
    
    <div
      className=" checkbox"
      onClick={[Function]}
    />
  </div>
  <p>
    some subtext for a toggle
  </p>
</li>
`;
